<resources>
    <string name="app_name">Pokedex</string>
    <string name="erro">Connection Error</string>
    <string name="retry_later">Please retry later</string>
    <string name="pokedex_id">Pokedex Number: </string>
    <string name="name">Name: </string>
    <string name="base_experience">Base Experience: </string>
    <string name="height">Height: </string>
    <string name="weight">Weight: </string>
    <string name="type">Type: </string>
    <string name="hp">HP</string>
    <string name="btn">Button</string>
</resources>